# ispras

./: .gitignore  README.md
sem1/comp_arch/hw1/: hexdump.c  randomfill.c  randomfill.dot
sem1/comp_net/: gen_sert.sh  openssl-ca.conf  serial  shushuevai-msp99-basic.crt  shushuevai-msp99-basic.key  shushuevai-msp99-ca.crt  shushuevai-msp99-ca.key  shushuevai-msp99-intr.crt  shushuevai-msp99-intr.key
sem1/comp_net/.build/: shushuevai-msp99-basic.key  shushuevai-msp99-ca.key  shushuevai-msp99-intr.key
sem1/comp_net/p1/: Dockerfile  README.md  gen_sert.sh  openssl-basic.conf  openssl-crl-revoked.conf  openssl-crl-valid.conf  openssl-intr.conf  openssl-ocsp-resp.conf  openssl-ocsp-revoked.conf  openssl-ocsp-valid.conf
sem1/comp_net/p1/cadir/: README.md
sem1/comp_net/p1/sites/conf/: nginx.conf
sem1/comp_net/p2/: Dockerfile  local.rules  shushuevai-msp21-trace.pcapng
sem1/comp_net/p3/: shushuevai-msp21-acl.pcapng  shushuevai-msp21-ua.pcapng
sem1/comp_net/p3/2/: shushuevai-msp21-acl.conf  shushuevai-msp21-acl.pcapng  shushuevai-msp21-bump.conf  shushuevai-msp21-bump.pcapng
sem1/fsm_ver/lab1/: .gitignore  main.py  model.dot  model.fsm  model.py
sem1/fsm_ver/lab1/tests/: test_main.py
sem1/fsm_ver/lab1/tests/w_tests/: w
sem1/ver/ltl/: .gitignore  CMakeLists.txt  README.md
sem1/ver/ltl/include/: atom.h  compiler.h
sem1/ver/ltl/lib/include/: fsm.h  ltl.h
sem1/ver/ltl/lib/src/: ltl.cpp  test.cpp
sem1/ver/ltl/src/: atom.cpp  compiler.cpp  main.cpp
sem1/ver/new_dpll/: .gitignore  CMakeLists.txt  README.md  main.cpp
sem1/ver/new_dpll/include/: clause.h  cnf.h  dpll.h  literal.h  literal_queue.h
sem1/ver/new_dpll/src/: clause.cpp  cnf.cpp  dpll.cpp  literal.cpp  literal_queue.cpp
sem1/ver/new_dpll/tests/: main.cpp  stress.cpp  unit.cpp
